# Loom

./: README.md  pyproject.toml
examples/: demo.py  skills_demo.py
loom/: __init__.py  behavior.py  cli.py  compress.py  dispatch.py  errors.py  loop.py  memory.py  model.py  registry.py  skill_loader.py  skills.py
skills/: build.md  plan.md  review.md
tests/: test_compress.py  test_dispatch.py  test_errors.py  test_loop.py  test_memory.py  test_registry.py  test_skill_loader.py  test_skills.py
